# s-o-u-l

./: .gitignore  Cargo.toml  Makefile  README.md
lib/computational_intelligence/: Cargo.toml
lib/computational_intelligence/src/: lib.rs  plugin.rs  prelude.rs  registry.rs
lib/computational_intelligence/src/analytics/: iit_phi.rs  iti_individuality.rs  swarm_metrics.rs
lib/computational_intelligence/src/automata/: mod.rs  plugin.rs
lib/computational_intelligence/src/automata/classical/: plugin.rs
lib/computational_intelligence/src/automata/classical/contextful/: mod.rs
lib/computational_intelligence/src/automata/classical/contextless/: ll1_pushdown.rs
lib/computational_intelligence/src/automata/classical/regular/: mod.rs  plugin.rs
lib/computational_intelligence/src/automata/classical/turing/: mod.rs  universal_tm.rs
lib/computational_intelligence/src/automata/dynamical/: mod.rs  plugin.rs
lib/computational_intelligence/src/automata/dynamical/lenia/: evolver.rs  kernel.rs  mod.rs  plugin.rs
lib/computational_intelligence/src/automata/dynamical/life/: mod.rs
lib/computational_intelligence/src/automata/dynamical/particle/: hpp.rs  mod.rs  plugin.rs
lib/computational_intelligence/src/automata/dynamical/reservior/: echo_state.rs  liquid_state.rs  mod.rs
lib/computational_intelligence/src/automata/dynamical/swarm/: ant_colony.rs  boids.rs  mod.rs
lib/computational_intelligence/src/bridges/: cell_adapter.rs  command_executor.rs  mod.rs  world_stepper.rs
lib/engine/: Cargo.toml
lib/engine/engine-common/: Cargo.toml  plugin.rs
lib/engine/engine-common/src/: lib.rs  plugin.rs  prelude.rs
lib/engine/engine-common/src/controls/: mod.rs
lib/engine/engine-common/src/controls/camera/: controller.rs  freecam.rs  mod.rs  plugin_bundle.rs  systems.rs
lib/engine/engine-common/src/scenes/: mod.rs
lib/engine/engine-common/src/scenes/main_menu/: mod.rs
lib/engine/engine-common/src/scenes/options/: mod.rs
lib/engine/engine-common/src/scenes/scenarios/: mod.rs  plugin.rs
lib/engine/engine-core/: Cargo.toml
lib/engine/engine-core/src/: events.rs  lib.rs  plugin.rs  prelude.rs
lib/engine/engine-core/src/automata/: mod.rs
lib/engine/engine-core/src/systems/: mod.rs
lib/engine/engine-core/src/systems/registry/: mod.rs
lib/engine/engine-core/src/systems/schedule/: mod.rs
lib/engine/engine-core/src/systems/simulation/: mod.rs
lib/engine/engine-core/src/systems/state/: mod.rs  plugin.rs  resources.rs
lib/engine/engine-core/src/world/: mod.rs  voxel_world.rs  world_stepper.rs
lib/engine/engine-core/src/world/generator/: mod.rs
lib/engine/engine-gpu/: Cargo.toml
lib/engine/engine-gpu/assets/: dual_contour.wgsl  voxel_mesh.wgsl
lib/engine/engine-gpu/assets/mesh/: mesh_path.wgsl  mesh_task.wgsl  mesh_topology.wgsl
lib/engine/engine-gpu/src/: fixed_sim.rs  graph.rs  lib.rs  pipelines.rs  plugin.rs  types.rs
lib/engine/engine-gpu/src/ash/: mesh_pipeline.rs  mesh_pipelines.rs  mesh_shader_node.rs  mod.rs
lib/engine/engine-gpu/src/compute/: dual_contour.rs  mesh_path.rs  mod.rs
lib/engine/engine-gpu/src/pipelines/: mod.rs
lib/engine/engine-gpu/src/plugin/: atlas.rs  labels.rs  mod.rs  textures.rs  voxel_draw_node.rs
lib/engine/engine-gpu/src/seed/: mod.rs
lib/engine/engine-gpu/src/seed/debug/: square.rs
lib/engine/engine-gpu/src/seed/lenia/: mod.rs
lib/engine/engine-render/: Cargo.toml
lib/engine/engine-render/src/: debug_plugin.rs  lib.rs  plugin.rs  prelude.rs
lib/engine/engine-render/src/command_executor/: mod.rs
lib/engine/engine-render/src/render/: material.rs  minimap.rs  mod.rs
lib/engine/engine-render/src/render/active/: mod.rs  plugin.rs  upload.rs
lib/engine/engine-render/src/render/camera/: controller.rs  floating_origin.rs  freecam.rs  gizmos.rs  mod.rs  systems.rs
lib/engine/engine-render/src/render/interpolator/: mod.rs
lib/engine/engine_core/: Cargo.toml
lib/engine/engine_core/src/: events.rs  lib.rs
lib/engine/engine_core/src/core/: cell.rs  mod.rs
lib/engine/engine_core/src/engine/: camera_manager.rs  components.rs  mod.rs  plugin.rs
lib/engine/engine_core/src/schedule/: mod.rs
lib/engine/engine_core/src/state/: plugin.rs  resources.rs
lib/engine/src/: lib.rs
lib/engine/src/core/: mod.rs  world.rs
lib/engine/src/renderer/: camera_manager.rs  components.rs  floating_origin.rs  mod.rs  plugin.rs
lib/engine/src/renderer/active/: mod.rs  plugin.rs  upload.rs
lib/engine/src/renderer/gpu/: pipelines.rs  plugin.rs
lib/engine/src/renderer/render_bridge/: mod.rs
lib/engine/src/renderer/stepper/: plugin.rs
lib/engine/src/renderer/worldgrid/: mod.rs
lib/engine/src/systems/: mod.rs
lib/engine/src/systems/registry/: mod.rs
lib/engine/src/systems/state/: mod.rs  plugin.rs
lib/io/output/: Cargo.toml
lib/io/output/src/: lib.rs  plugin.rs
lib/io/output/src/rendering/: grid2d.rs  material.rs  mod.rs  world_camera.rs
lib/io/output/src/ui/: mod.rs
lib/models/: Cargo.toml
lib/models/src/: lib.rs  plugin.rs  prelude.rs
lib/models/src/analytics/: clustering.rs  iit_phi.rs  iti_individuality.rs  mod.rs  swarm_metrics.rs
lib/models/src/automata/: plugin.rs
lib/models/src/automata/classical/: mod.rs
lib/models/src/automata/dynamical/: mod.rs
lib/tests/: Cargo.toml
lib/tests/src/: lib.rs  sim_loop.rs  util.rs
lib/ui/: Cargo.toml
lib/ui/src/: lib.rs  plugin.rs
lib/ui/src/components/: mod.rs  plugin.rs
lib/ui/src/components/banners/: mod.rs  pause_banner.rs  plugin.rs
lib/ui/src/components/debug/: debug_menu.rs  debug_stats_metrics.rs  mod.rs  plugin.rs
lib/ui/src/components/menus/: mod.rs  plugin.rs
lib/ui/src/overlays/: debug_stats.rs  mod.rs  plugin.rs
lib/ui/src/overlays/camera/: camera_debug.rs  mod.rs  zoom_overlay.rs
lib/ui/src/overlays/minimap/: mod.rs
lib/ui/src/panels/: mod.rs  plugin.rs
lib/ui/src/panels/file_io/: mod.rs
lib/ui/src/panels/main_menu/: mod.rs  model.rs  view.rs
lib/ui/src/panels/world/: minimap_overlay.rs  mod.rs  pause_menu.rs  plugin.rs  zoom_overlay.rs
lib/ui/src/styles/: fade.rs  mod.rs  plugin.rs
src/: main.rs  (+1 more)
(+301 files in other folders)
