[package] 
name    = "swarm_orchestrator_for_autonomous_learners"
version = "0.1.0"
edition = "2024"

[dependencies]                
bevy        = { workspace = true } 
egui        = { version = "0.32.0" }
bevy_egui   = { workspace = true } 
serde       = { workspace = true } 
serde_json  = { workspace = true }
rand        = { workspace = true }
dirs-next   = { workspace = true }
toml        = { workspace = true }
num-traits  = { workspace = true }

# local imports
tooling                     = { path = "lib/tooling" }
engine_core                 = { path = "lib/engine_core" }
input                       = { path = "lib/io/input" }
output                      = { path = "lib/io/output" }
computational_intelligence  = { path = "lib/computational_intelligence" }
# ────────────────────────────────────────────────────────────────────────────
# Workspace definition
# ────────────────────────────────────────────────────────────────────────────
[workspace]
# Paths are *relative to this file*.
members = [
    ".",
    "lib/computational_intelligence",
    "lib/engine_core",
    "lib/io/input",
    "lib/io/output",
]

[workspace.dependencies]
bevy         = { version = "0.16.1", features = ["bevy_render", "bevy_sprite", "bevy_core_pipeline", "bevy_winit", "png"] }
bevy_egui    = { version = "0.35.1" }
serde        = { version = "1.0.219", features = ["derive"] }
serde_json   = { version = "1.0.141" }
rand         = { version = "0.9.1" }
dirs-next    = { version = "2.0" }
toml         = { version = "0.9.2" }
num-traits = { version = "0.2" }