[package]
name    = "swarm_orchestrator_for_autonomous_learners"
version = "0.1.0"
edition = "2024"
publish = false                           # workspace only

# ────────────────────────────────────────────────────────────────────────────
# Cargo *features*
# ---------------------------------------------------------------------------
[features]
default      = ["gpu-compute"]
gpu-compute  = []

[dependencies]
bevy        = { workspace = true }
egui        = { version = "0.32.0" }
bevy_egui   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rand        = { workspace = true }
dirs-next   = { workspace = true }
toml        = { workspace = true }
num-traits  = { workspace = true }

# local crates – **all path‑based**, no published versions
tooling                    = { path = "lib/tooling" }
engine_core                = { path = "lib/engine//engine_core" }
output                     = { path = "lib/output" }
computational_intelligence = { path = "lib/computational_intelligence" }
rayon = "1.10.0"
lazy_static = "1.5.0"

# ────────────────────────────────────────────────────────────────────────────
# Workspace definition
# ────────────────────────────────────────────────────────────────────────────
[workspace]
members = [
    ".",
    "lib/computational_intelligence",
    "lib/engine/engine_core",
    "lib/output",
    "lib/tooling",
]
resolver = "2"

[profile.dev]
opt-level = 1                # a little optimisation for your own crate

[profile.dev.package."*"]
opt-level = 3                # full optimisation for every dependency

[workspace.dependencies]
bevy        = { version = "0.16.1", features = ["bevy_core_pipeline", "bevy_render", "bevy_sprite","bevy_winit", "bevy_ui", "png", "dynamic_linking"] }
bevy_egui   = { version = "0.35.1" }
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = { version = "1.0.141" }
rand        = { version = "0.9.2" }
dirs-next   = { version = "2.0" }
toml        = { version = "0.9.2" }
num-traits  = { version = "0.2" }
rayon       = { version = "1.10.0" }