[package]
name    = "swarm_orchestrator_for_autonomous_learners"
version = "0.1.0"
edition = "2024"
publish = false                           # workspace only

# ────────────────────────────────────────────────────────────────────────────
# Cargo *features*
# ---------------------------------------------------------------------------
[features]
default         = []          # keep defaults lean
gpu-compute     = ["engine-render/gpu-compute"]
gpu-debug       = ["engine-gpu/gpu-debug"]

[dependencies]
bevy        = { workspace = true }
egui        = { version = "0.32.0" }
bevy_egui   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rand        = { workspace = true }
dirs-next   = { workspace = true }
toml        = { workspace = true }
num-traits  = { workspace = true }
rayon       = { workspace = true }

# local crates – **all path‑based**, no published versions
tooling                             = { path = "lib/tooling" }
engine-common                         = { path = "lib/engine/engine-common" }
engine-core                         = { path = "lib/engine/engine-core" }
engine-gpu                          = { path = "lib/engine/engine-gpu" }
engine-render                       = { path = "lib/engine/engine-render" }
ui                                  = { path = "lib/ui" }
models                              = { path = "lib/models" }
simulation_kernel                   = { path = "lib/simulation_kernel"}
lazy_static                         = "1.5.0"

# ────────────────────────────────────────────────────────────────────────────
# Workspace definition
# ────────────────────────────────────────────────────────────────────────────
[workspace]
members = [
    ".",
    "lib/models",
    "lib/engine/engine-core",
    "lib/engine/engine-gpu",
    "lib/engine/engine-render",
    "lib/ui",
    "lib/tooling", 
    "lib/simulation_kernel", "lib/tests", "lib/engine/engine-common",
]
resolver = "2"

[profile.dev]
opt-level = 1                # a little optimisation for your own crate

[profile.dev.package."*"]
opt-level = 3                # full optimisation for every dependency

[workspace.dependencies]
glam = { version = "0.29.3", features = ["serde"] }
bevy        = { version = "0.16.1", features = [ "bevy_core_pipeline", "bevy_render", "bevy_winit", "bevy_ui", "png", "dynamic_linking", "bevy_gizmos", "bevy_pbr" ] }
bevy_render = { version = "0.16.1" }
bevy_app    = { version = "0.16.1" }
bevy_ecs    = { version = "0.16.1" }
bevy_egui   = { version = "0.35.1", features = ["default"] }
bytemuck    = { version = "1.23.1" }
serde       = { version = "1.0.219", features = ["derive"] }
serde_json  = { version = "1.0.141" }
rand        = { version = "0.9.2" }
dirs-next   = { version = "2.0" }
toml        = { version = "0.9.2" }
num-traits  = { version = "0.2" }
rayon       = { version = "1.10.0" }
bitflags    = { version = "2.9.1" }
libloading  = { version = "0.8.8" }
