[package]
name = "computational_intelligence"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_core = { path = "../engine_core" }
bevy        = { workspace = true } 
serde       = { workspace = true } 
rand        = { workspace = true }
serde_json  = { workspace = true }
num-traits  = { workspace = true }