[package]
name = "computational_intelligence"
version = "0.1.0"
edition = "2024"

[features]
gpu-compute = []

[dependencies]
glam        = { workspace = true }
bevy        = { workspace = true } 
serde       = { workspace = true } 
rand        = { workspace = true }
serde_json  = { workspace = true }
num-traits  = { workspace = true }
rayon       = { workspace = true }

simulation_kernel = { path = "../simulation_kernel" }
engine = { path = "../engine" }