[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[features]
gpu-compute = []   # enables GPU compute back‑end

[dependencies]
bytemuck = { version="1.23.1", features = ["derive"] }
bevy_reflect = { version = "0.16.1" }

glam        = { workspace = true }
bevy        = { workspace = true }
bevy_egui   = { workspace = true }
serde       = { workspace = true } 
serde_json  = { workspace = true }
rand        = { workspace = true }
dirs-next   = { workspace = true }
toml        = { workspace = true }

simulation_kernel = { path = "../simulation_kernel" }