[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck            = { version = "1.23.1", features = ["derive"] }

bevy                = { workspace = true }
bevy_egui           = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
rand                = { workspace = true }
bitflags            = { workspace = true }

# Local
models              = { path = "../models" }
simulation_kernel   = { path = "../simulation_kernel" }
tooling             = { path = "../tooling" }
engine-common         = { path = "../engine/engine-common" }
engine-core         = { path = "../engine/engine-core" }
engine-render       = { path = "../engine/engine-render" }