[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy                  = { workspace = true, features = ["bevy_render"] }
bevy_ecs              = { workspace = true }
glam                  = { workspace = true }
serde                 = { workspace = true, features = ["derive"] }
serde_json            = { workspace = true }
rayon                 = { workspace   = true }
dirs-next             = { workspace = true }

simulation_kernel     = { path = "../../simulation_kernel" }