# ------------------------------------------------------------
# • Introduces an opt-in `mesh_shaders` feature for the future
#   fast-path (currently commented-out).
# • Keeps `shaderc` behind its own `fallback_spirv` flag.
# ------------------------------------------------------------
[package]
name     = "engine-gpu"
version  = "0.1.0"
edition  = "2024"

[dependencies]
bevy       = { workspace = true, features = ["bevy_render", "bevy_core_pipeline"] }
bevy_egui  = { workspace = true }
bytemuck   = { workspace = true }

# GPU/Vulkan integration (optional, for mesh shader feature)
ash       = { version = "0.32.1", optional = true }
naga_oil  = { version = "0.18.0", optional = true }
shaderc   = { version = "0.9.1", optional = true }

engine-core       = { path = "../engine-core" }
simulation_kernel = { path = "../../simulation_kernel" }

[features]
default        = []                # lean build (GPU compute path)
mesh_shaders   = ["ash", "naga_oil"]   # enable experimental mesh-shader fast-path
fallback_spirv = ["shaderc"]
