# ------------------------------------------------------------
# Mesh-shader fast-path is enabled by default.
# Older GPUs fall back automatically at run-time.
# ------------------------------------------------------------
[package]
name    = "engine-gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy        = { workspace = true, features = ["bevy_render","bevy_core_pipeline","bevy_winit","bevy_window"] }
bevy_egui   = { workspace = true }
bytemuck    = { workspace = true }
# still used elsewhere in the crate, keep it
libloading  = { workspace = true }

# GPU / Vulkan integration (mesh-shader backend)
wgpu        = { version = "24.0.5", default-features = false, features = ["wgsl"] }
wgpu-hal    = { version = "24.0.4", optional = true, features = ["vulkan"] }

ash         = { version = "0.38.0", optional = true }     # ← same version as wgpu-hal
naga        = { version = "24.0.0" }
naga_oil    = { version = "0.18.0", optional = true }
shaderc     = { version = "0.9.1",  optional = true }

engine-core       = { path = "../engine-core" }
simulation_kernel = { path = "../../simulation_kernel" }

[features]
default        = ["mesh_shaders"]
mesh_shaders   = ["ash", "naga_oil"]     # optional deps become features automatically
fallback_spirv = ["shaderc"]
gpu-debug      = []
