[package]
name    = "engine-render"
version = "0.1.0"
edition = "2024"

[features]
# Automatically compile the GPU back-end unless the parent crate
# disables default features.
default      = ["gpu-compute"]
# Re-export so downstream crates can write `features = ["gpu-compute"]`
gpu-compute  = ["engine-gpu"]

[dependencies]
glam                = { workspace = true }
bevy                = { workspace = true,  features = [ "bevy_render" ] }          # full Bevy with renderer & UI
bevy_ecs            = { workspace = true }
bevy_reflect        = { version = "0.16.1" }
engine-common         = { path = "../engine-common" }
engine-core         = { path = "../engine-core" }
engine-gpu          = { path = "../engine-gpu", optional = true }
tooling             = { path = "../../tooling" }
simulation_kernel   = { path = "../../simulation_kernel" }

serde               = { workspace = true }
serde_json          = { workspace = true }
rand                = { workspace = true }
rayon               = { workspace = true }
