[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy        = { workspace = true }
bevy_egui   = { workspace = true }
serde       = { workspace = true } 
serde_json  = { workspace = true }
rand        = { workspace = true }
dirs-next   = { workspace = true }
toml        = { workspace = true }