[package]
name = "output"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
bevy_reflect = { version = "0.16.1" }

engine_core = { path = "../../engine/engine_core" }
computational_intelligence = { path = "../../computational_intelligence" }
input = { path = "../input" }

bevy        = { workspace = true }
bevy_egui   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
rand        = { workspace = true }